# ai-bit

./: .env.example  .gitignore  Dockerfile  README.md  RELEASE_3.3.0.md  compose.platform.yml  docker-compose.yml  pyproject.toml  release_600_menu_patch.py
ad-agent/: README.md
app/: bootstrap.py  implementation.py  main.py
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/: browser.py  discovery.py  health.py  infrastructure_ui.py  router.py
backend/app/browser/: __init__.py  models.py  service.py
backend/app/core/: config.py  lifecycle.py  logging.py
backend/app/discovery/: models.py  service.py
backend/app/plugins/: base.py  registry.py
backend/app/storage/: base.py  filesystem.py
backend/tests/: test_browser_evidence.py  test_discovery.py  test_platform_core.py
browser-worker/: Dockerfile  active_integration_analysis.py  admin_dashboard.py  ai_provider.py  app.py  automation_dashboard.py  best_practice_integration_assessment.py  bitrix_onec_integration_audit.py  bitrix_onec_integration_dashboard.py  brand_cleanup_patch.py  branding.py  branding_patch.py  build_patch.py  business_architecture.py  business_architecture_dashboard.py  business_value.py  business_value_advanced_patch.py  business_value_patch.py  capability_discovery.py  capability_discovery_patch.py  crawler.py  crawler_patch.py  dashboard.py  deep_audit.py  deep_rest_evidence.py  deep_rest_patch.py  discovery_ingestion_patch.py  discovery_selftest.py  dual_integration_reporting.py  evidence_audit_patch.py  (+91 more)
(+28 files in other folders)
