[project]
name = "ai-bit"
version = "0.1.0"
description = "Read-only Bitrix24 audit service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic-settings>=2.10,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.4,<9.0", "ruff>=0.12,<1.0"]

[tool.ruff]
line-length = 100
