[project]
name = "ai-bit-platform"
version = "7.0.0a1"
description = "AI-BIT Enterprise modular platform core"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic-settings>=2.8,<3",
]

[project.optional-dependencies]
test = ["httpx>=0.28,<1", "pytest>=8.3,<9"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
